[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulator"
crate-type = ["rlib"]

[dependencies]
libc = { version = "0.2.155", optional = true }
thiserror = { version = "1.0", optional = true }
borsh = { version = "1.2", optional = true }
tokio = { version = "1.36", features = ["sync", "rt", "test-util", "macros"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = { version = "0.2.155" }
thiserror = { version = "1.0" }
borsh = { version = "1.2" }
wasmtime = "15.0.1"
tokio = { version = "1.36", features = ["sync", "rt", "test-util", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
bindgen = { version = "0.69.4" }
serde_json = { version = "1.0.122" }

[target.'cfg(not(target_arch = "wasm32"))'.lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["std"]
std = []
no_std = []

[package.metadata.docs.rs]
all-features = true
