[package]
name = "wasmlanche-cosmwasm-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.5.0"
wasmtime = "15.0.1"
k256 = { version = "0.13.1", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
sha2 = "0.10.8"
rand_core = "0.6.4"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
borsh = "1.2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
wat = "1.0"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
