[package]
name = "wasmlanche-cosmwasm-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.5"
wasmtime = "17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
wat = "1.0"

[dev-dependencies]
tempfile = "3.2"
