[package]
name = "wasmlanche"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
bytemuck = { version = "1.17.0", features = ["derive"] }
cfg-if = "1.0.0"
displaydoc = { version = "0.2.5", default-features = false }
hashbrown = "0.14.5"
sdk-macros = { workspace = true }
thiserror = { workspace = true }
simulator = { path = "../simulator", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.11.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simulator = { path = "../simulator", features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5.1"
iai = "0.1.1"
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
wasmlanche-test = { path = "wasmlanche-test" }

[features]
default = ["std"]
std = []
wasm = []
simulator = ["dep:simulator"]
bindings = ["std"]
build = ["std"]
debug = ["std"]
test = ["std"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "call_contract_time"
harness = false

[[bench]]
name = "call_contract_mem"
harness = false
