[package]
name = "wasmlanche"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", default-features = false, optional = true }
borsh = { version = "0.10", default-features = false }
bytemuck = { version = "1.17.0", features = ["derive"] }
cfg-if = "1.0.0"
displaydoc = "0.2"
hashbrown = "0.14.5"
hex = "0.4"
parking_lot = "0.12.1"
sdk-macros = { workspace = true }
spin = "0.9.8"
thiserror = { version = "1.0", optional = true }
simulator = { path = "../simulator", default-features = false, optional = true }
tokio = { version = "1.0", features = ["sync", "rt", "macros"], optional = true }
wasmtime = { version = "15.0.1", features = ["async"], optional = true }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "3.2", default-features = false, features = ["u64_backend"] }
ed25519-dalek = { version = "1.0", default-features = false, features = ["u64_backend", "std"], optional = true }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }

[dev-dependencies]
env_logger = "0.11.5"
tokio = { version = "1.0", features = ["full"] }
test-log = "0.2.14"
test-crate = { path = "tests/test-crate" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simulator = { path = "../simulator", features = ["std"] }

[features]
default = ["std"]
std = [
    "borsh/std",
    "thiserror",
    "wasmtime",
    "tokio",
    "sha2/std",
    "sha3/std",
    "curve25519-dalek/std",
    "ed25519-dalek",
    "simulator/std",
    "async-trait",
    "futures/std"
]
wasm = []
simulator = ["dep:simulator"]
bindings = ["std"]
build = ["std"]
debug = ["std"]
test = ["std"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "call_contract_time"
harness = false

[[bench]]
name = "call_contract_mem"
harness = false
