[package]
name = "cosmwasm_counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.8.8"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cosmwasm-schema = "1.5.0"
